--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene>
       <a-assets>
         <!-- 3Dモデルを読み込む -->
-        <a-asset-item id="applemove" src="assets/applemove.glb" scale="1 1 1"></a-asset-item>
+        <a-asset-item id="applemove" src="applemove.glb" scale="1 1 1"></a-asset-item>
       </a-assets>
 
         <!-- リンゴ -->
