--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <!-- animationmixerを読み込む -->
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <!-- 原因菌をぶち込む -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
   <body>
     <!-- シーンの作成、VRモードのUI非表示 -->
