--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a-entity camera look-controls></a-entity>
 
         <!-- 赤い立方体 -->
-        <a-box id="redBox" color="red" position="0 0 -1"></a-box>
+        <a-box id="redBox" color="yellow" position="0 0 -1"></a-box>
     </a-scene>
 
     <script>
@@ -29,9 +29,9 @@
 
             // 距離が10メートル未満の場合、色を黄色に変更
             if (distance < 10) {
-                redBox.setAttribute('color', 'yellow');
-            } else {
                 redBox.setAttribute('color', 'red');
+            } else {
+                redBox.setAttribute('color', 'blue');
             }
         }
 
