--- a/index.html
+++ b/index.html
@@ -2,52 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Distance Display</title>
+    <title>AR Color Changing Cube</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene>
-        <!-- カメラ -->
-        <a-entity camera look-controls></a-entity>
+    <a-scene xrweb>
+        <!-- AR用のカメラ -->
+        <a-entity camera ar.js="sourceType: webcam;"></a-entity>
 
-        <!-- 赤い立方体 -->
-        <a-box id="redBox" color="red" position="0 1.6 -5"></a-box>
+        <!-- 連続的に色が変化する立方体 -->
+        <a-box id="colorChangingBox" color="#ff0000" position="0 0 -5"></a-box>
     </a-scene>
 
-    <!-- 距離を表示する要素 -->
-    <div id="distanceDisplay" style="position: absolute; top: 20px; right: 20px; color: white; font-size: 24px;"></div>
-
     <script>
-        // カメラと赤い立方体の距離を監視する関数
-        function checkDistance() {
-            const camera = document.querySelector('a-camera');
-            const redBox = document.querySelector('#redBox');
-            const distanceDisplay = document.querySelector('#distanceDisplay');
-            
-            // カメラと赤い立方体の位置を取得
-            const cameraPosition = new THREE.Vector3().setFromMatrixPosition(camera.object3D.matrixWorld);
-            const redBoxPosition = new THREE.Vector3().setFromMatrixPosition(redBox.object3D.matrixWorld);
-
-            // 二つの位置の距離を計算
-            const distance = cameraPosition.distanceTo(redBoxPosition);
-
-            // 距離をテキストとして表示
-            distanceDisplay.textContent = 'Distance: ' + distance.toFixed(2) + 'm';
-
-            // 距離が10メートル未満の場合、色を黄色に変更
-            if (distance < 10) {
-                redBox.setAttribute('color', 'yellow');
-            } else {
-                redBox.setAttribute('color', 'red');
+        AFRAME.registerComponent('color-changer', {
+            tick: function (time, timeDelta) {
+                // 時間に基づいて色を連続的に変化させる
+                const colorChangingBox = this.el;
+                const hue = (time / 1000) % 1; // 色相を時間に基づいて変化させる
+                const color = new THREE.Color().setHSL(hue, 1, 0.5);
+                colorChangingBox.setAttribute('material', 'color', color.getStyle());
             }
-        }
+        });
 
-        // カメラの位置が変更されるたびに距離をチェック
-        const camera = document.querySelector('a-camera');
-        camera.addEventListener('componentchanged', checkDistance);
+        // 立方体に色変更コンポーネントを追加
+        const colorChangingBox = document.querySelector('#colorChangingBox');
+        colorChangingBox.setAttribute('color-changer', '');
 
-        // 初期状態で距離をチェック
-        checkDistance();
+        // ARセッションを開始
+        document.querySelector('a-scene').addEventListener('loaded', function () {
+            const scene = this;
+            const camera = scene.querySelector('[camera]');
+
+            scene.renderer.xr.enabled = true;
+            scene.renderer.xr.getSession().then(function (session) {
+                session.updateReferenceSpaceType('local');
+                session.requestReferenceSpace('local').then(function (referenceSpace) {
+                    session.requestAnimationFrame(function (time, frame) {
+                        camera.components['arjs'].updateARToolKit();
+                    });
+                });
+
+                session.addEventListener('end', function () {
+                    window.location.reload();
+                });
+
+                session.requestSession({ requiredFeatures: ['local'], optionalFeatures: ['dom-overlay'], domOverlay: { root: document.body } }).then(function () {
+                    camera.setAttribute('camera', 'active', true);
+                    scene.add(camera);
+                });
+            });
+        });
     </script>
 </body>
 </html>
