--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         gps-entity-place="latitude: 137.954969; longitude: 139.339143;"
         scale="1 1 1"
       ></a-box>
-      <a-camera gps-camera="minDistance:1; maxDistance:100" rotation-reader> </a-camera>
+      <a-camera gps-camera="gpsMinDistance:10;" rotation-reader> </a-camera>
     </a-scene>
   </body>
 </html>
