--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  <html>
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,20 +8,18 @@
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
-
   <body style="margin: 0; overflow: hidden;">
     <a-scene
       vr-mode-ui="enabled: false"
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-      <a-text
-        value="This content will always face you."
-        look-at="[gps-camera]"
-        scale="50 50 50"
-        gps-entity-place="latitude: 37.955693; longitude: 139.338703;"
-      ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
+      <a-box
+        material="color: red"
+        gps-entity-place="latitude: 37.955697; longitude: 139.338617;"
+        scale="30 30 30"
+      ></a-box>
+      <a-camera gps-camera="minDistance:30; maxDistance:100" rotation-reader> </a-camera>
     </a-scene>
   </body>
 </html>
