--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <style>
+      #debug {
+        position: fixed;
+        z-index: 10000;
+        background-color: #fff;
+        padding: 10px;
+        top: 0;
+        left: 0;
+        display: block;
+      }
+    </style>
   </head>
+
   <body style="margin: 0; overflow: hidden;">
+    <div id="debug"></div>
     <a-scene
       vr-mode-ui="enabled: false"
       embedded
@@ -17,9 +30,26 @@
       <a-box
         material="color: red"
         gps-entity-place="latitude: 37.955697; longitude: 139.338617;"
-        scale="30 30 30"
+        scale="15 15 15"
       ></a-box>
-      <a-camera gps-camera="minDistance:30; maxDistance:100" rotation-reader> </a-camera>
+      <a-text
+        id="text"
+        value=""
+        look-at="[gps-camera]"
+        scale="30 30 30"
+        position="0 55 0"
+        gps-entity-place="latitude: 37.955697; longitude: 139.338617;"
+      ></a-text>
+      <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
+    <script>
+      window.addEventListener('load', () => {
+        const text = document.getElementById('text');
+        text.addEventListener('gps-entity-place-update-positon', (event) => {
+          document.getElementById('debug').textContent = `あと${event.detail.distance}m`;
+          text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
+        });
+      });
+    </script>
   </body>
 </html>
