--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         const text = document.getElementById('text');
         text.addEventListener('gps-entity-place-update-positon', (event) => {
           document.getElementById('debug').textContent = `${event.detail.distance}m`;
-          text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
+         // text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
         });
       });
     </script>
