--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         z-index: 10000;
         background-color: #fff;
         padding: 10px;
+        font-size: 100px;
         top: 0;
         left: 0;
         display: block;
