--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body style="margin: 0; overflow: hidden;">
-    <div id="debug">AAAaaa</div>
+    <div id="debug"></div>
     <a-scene
       vr-mode-ui="enabled: false"
       embedded
