--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     >
       <a-box
         material="color: red"
-        gps-entity-place="latitude: 37.955697; longitude: 139.338617;"
+        gps-entity-place="latitude: 37.94781383890853; longitude: 139.32706387291938"
         scale="15 15 15"
       ></a-box>
       <a-text
