--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         look-at="[gps-camera]"
         scale="30 30 30"
         position="0 55 0"
-        gps-entity-place="latitude: 37.955697; longitude: 139.338617;"
+        gps-entity-place="latitude: 37.9478138389; longitude: 139.3270638729"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
